# bazeltest

./: BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  main.go
